--- a/locale/en/poop.cfg
+++ b/locale/en/poop.cfg
@@ -1,4 +1,12 @@
-building-time-technology=Building time speed
+[ammo-category-name]
+building-time=Building time
+
+[technology-name]
+building-time-technology=Building time speed up
+
+[technology-description]
+building-time-technology=Reduce time required for entities construction
+
 [modifier-description]
 building-time-damage-bonus=Building time speed increase: +__1__
 
